--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   loading_animations: ^2.2.0
   cloud_firestore: ^2.4.0
   intl: ^0.17.0
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
