--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^2.4.0
   intl: ^0.17.0
   shared_preferences: ^2.0.6
+  charts_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
